# pact

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  INSTALL.zh.md  LICENSE  README.md  README.zh.md  RELEASE.md  USAGE.md  USAGE.zh.md  pyproject.toml
.claude/commands/: pact.build.md  pact.contract.md  pact.init.md  pact.pid.md  pact.retro.md  pact.scope.md  pact.ship.md  pact.verify.md
.cursor/rules/: pact.mdc
.github/workflows/: pact-check.yml  publish-pypi.yml  python-package.yml
.pact/: queue.example.json  state.example.json  state.md
.pact/core/: architecture.md  constitution.md  workflow.md
.pact/hooks/: check-state.sh
.pact/knowledge/: patterns.md
.pact/knowledge/archive/: README.md
.pact/schemas/: queue.schema.json
.pact/scope/: boundaries.md  fitness.md
.pact/specs/: PAD.md  README.md
.pact/templates/: FDG.md  PAD.md  README.md  contract.md  design-brief.md  exec-plan.md  handover.md  intent.md  interaction.md  module-AGENTS.md  pid-card.md  sequence.md  verify.md
.pact/tests/: README.md
docs/adapters/: claude-code.md  codex.md  cursor.md  prompts.md  prompts.zh.md
docs/concepts/: design-attachments-lite.md  global-spine-lite.md
docs/migration/: adopt-global-spine-lite.md
examples/: README.md
examples/order-flow/: README.md  package.json
examples/secure-notes/: README.md  package.json
examples/todo-feature/: README.md  package.json
scripts/: install-from-github.ps1  install-from-github.sh  install-pact.ps1  install-pact.sh
src/pact_toolkit/: __init__.py  cli.py
(+96 files in other folders)
